// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/FlagPostSearchHint should match snapshot, with data retention 1`] = `
<Fragment>
  <ul>
    <li>
      <FormattedMessage
        defaultMessage="You haven't flagged any messages yet."
        id="search_results.usageFlag1"
        values={Object {}}
      />
    </li>
    <li>
      <FormattedMessage
        defaultMessage="You can add a flag to messages and comments by clicking the {flagIcon} icon next to the timestamp."
        id="search_results.usageFlag2"
        values={
          Object {
            "flagIcon": <FlagIcon
              className="usage__icon"
            />,
          }
        }
      />
    </li>
    <li>
      <FormattedMessage
        defaultMessage="Flags are a way to mark messages for follow up. Your flags are personal, and cannot be seen by other users."
        id="search_results.usageFlag4"
        values={Object {}}
      />
    </li>
    <DataRetentionHint
      dataRetentionMessageRetentionDays="30"
    />
  </ul>
</Fragment>
`;

exports[`components/FlagPostSearchHint should match snapshot, without data retention 1`] = `
<Fragment>
  <ul>
    <li>
      <FormattedMessage
        defaultMessage="You haven't flagged any messages yet."
        id="search_results.usageFlag1"
        values={Object {}}
      />
    </li>
    <li>
      <FormattedMessage
        defaultMessage="You can add a flag to messages and comments by clicking the {flagIcon} icon next to the timestamp."
        id="search_results.usageFlag2"
        values={
          Object {
            "flagIcon": <FlagIcon
              className="usage__icon"
            />,
          }
        }
      />
    </li>
    <li>
      <FormattedMessage
        defaultMessage="Flags are a way to mark messages for follow up. Your flags are personal, and cannot be seen by other users."
        id="search_results.usageFlag4"
        values={Object {}}
      />
    </li>
  </ul>
</Fragment>
`;
